style: cMain styling finished

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
         </p>
         <div class="collapse" id="collapseEmagrecimento">
-            <div class="card card-body bg-dark cMain__collapse">
+            <div class="card card-body cMain__collapse">
                 <a href="https://ev.braip.com/ref?pv=proyx1v2&af=afiydj0onn" target="_blank">SECA BARRIGA</a>
                 <a href="https://ev.braip.com/ref?pv=prover52&af=afi4vng86q" target="_blank">BEM MAGRO</a>       
                 <a href="https://ev.braip.com/ref?pv=pro3yoz3&af=afidqyz0p" target="_blank">LIFT DETOX BLACK</a>
@@ -43,7 +43,7 @@
             
         </p>
         <div class="collapse" id="collapseDietas">
-            <div class="card card-body bg-dark cMain__collapse">
+            <div class="card card-body cMain__collapse">
                 <a href="https://ev.braip.com/ref?pv=prox6q28&af=afiydv9x85" target="_blank">CARDAPIO EMAGRECEDOR 2.0</a>
                 <a href="https://ev.braip.com/ref?pv=prodnrmj&af=afijp9v34m" target="_blank">51 REFEIÇOES PARA SECAR</a>
             </div>
@@ -56,7 +56,7 @@
             </a>
         </p>
         <div class="collapse" id="collapseColageno">
-            <div class="card card-body bg-dark cMain__collapse">
+            <div class="card card-body cMain__collapse">
                 <a href="https://ev.braip.com/ref?pv=progx18j&af=afiydv9z32" target="_blank">B-DREAM COLAGENO</a>
                 <a href="https://ev.braip.com/ref?pv=prol8qqm&af=afi9ez8v75" target="_blank">DREAM COLAGENO</a>
                 <a href="https://ev.braip.com/ref?pv=proyv683&af=afig50238q" target="_blank">COLAGENO GOTA</a>
@@ -70,7 +70,7 @@
             </a>
         </p>
         <div class="collapse" id="collapseEstimulantes">
-            <div class="card card-body bg-dark cMain__collapse">
+            <div class="card card-body cMain__collapse">
                 <a href="https://ev.braip.com/ref?pv=proz3mkw&af=afi283eg8n" target="_blank">AZULZINHO AFRICANO</a>
                 <a href="https://ev.braip.com/ref?pv=pro85d7w&af=afi8jol1vy" target="_blank">AS CAPS</a>
             </div>
@@ -81,8 +81,8 @@
             <img src="https://static.wixstatic.com/media/1ee543_4f1f0f8ef4eb4a15b181e6212b58a9dc~mv2.gif" class="cMain__ico">
         </a>
 
-        <a href="https://www.instagram.com/knsuplementosoficial_/" target="_blank" class="cMain__icoInsta">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
+        <a href="https://www.instagram.com/knsuplementosoficial_/" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256" class="cMain__icoInsta">
                 <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M16,3c-7.16752,0 -13,5.83248 -13,13v18c0,7.16752 5.83248,13 13,13h18c7.16752,0 13,-5.83248 13,-13v-18c0,-7.16752 -5.83248,-13 -13,-13zM16,5h18c6.08648,0 11,4.91352 11,11v18c0,6.08648 -4.91352,11 -11,11h-18c-6.08648,0 -11,-4.91352 -11,-11v-18c0,-6.08648 4.91352,-11 11,-11zM37,11c-1.10457,0 -2,0.89543 -2,2c0,1.10457 0.89543,2 2,2c1.10457,0 2,-0.89543 2,-2c0,-1.10457 -0.89543,-2 -2,-2zM25,14c-6.06329,0 -11,4.93671 -11,11c0,6.06329 4.93671,11 11,11c6.06329,0 11,-4.93671 11,-11c0,-6.06329 -4.93671,-11 -11,-11zM25,16c4.98241,0 9,4.01759 9,9c0,4.98241 -4.01759,9 -9,9c-4.98241,0 -9,-4.01759 -9,-9c0,-4.98241 4.01759,-9 9,-9z"></path></g></g>
         </a>
         </svg>
