feat: favicon added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="imgs/logo-kn2-ico.ico" type="image/x-icon">
     <title>KN Suplementos</title>
 </head>
 <body>
