feat: whatsapp link added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             </div>
         </div>
         <!--  -->
-        <a href="#" class="btn btn-primary cMain__btn">
+        <a href="
+        https://wa.me/+5585987688217?text=Ol%C3%A1,%20gostaria%20de%20tirar%20d%C3%BAvidas%20sobre%20os%20produtos.
+        " target="_blank" class="btn btn-primary cMain__btn">
             PARA MAIS INFORMAÇÕES
             <img src="https://static.wixstatic.com/media/1ee543_4f1f0f8ef4eb4a15b181e6212b58a9dc~mv2.gif" class="cMain__ico">
         </a>
