feat: Mudança de Kn Suplementos para Kn Encapsulados

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="imgs/logo-kn2-ico.ico" type="image/x-icon">
-    <title>KN Suplementos</title>
+    <link rel="shortcut icon" href="imgs/kn-favicon.ico" type="image/x-icon">
+    <title>KN Encapsulados</title>
 </head>
 <body>
     <header class="cHeader">
-        <img src="imgs/logo-kn2.png" alt="logo-kn-suplementos" class="cHeader__logo">
-        <h1 class="cHeader__arroba">@knsuplementosoficial</h1>
+        <img src="imgs/kn-logo.png" alt="logo-kn-suplementos" class="cHeader__logo">
+        <h1 class="cHeader__arroba">KN Encapsulados</h1>
     </header>
 
     <main class="cMain">
@@ -26,57 +26,46 @@
                 EMAGRECIMENTO 
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/site.oticabarbosa.com.br/2678904f-seta-baixo.gif" class="cMain__ico">
             </a>
-        </p>
-        <div class="collapse" id="collapseEmagrecimento">
-            <div class="card card-body cMain__collapse">
-                <a href="https://ev.braip.com/ref?pv=proyx1v2&af=afiydj0onn" target="_blank">SECA BARRIGA</a>
-                <a href="https://ev.braip.com/ref?pv=prover52&af=afi4vng86q" target="_blank">BEM MAGRO</a>       
-                <a href="https://ev.braip.com/ref?pv=pro3yoz3&af=afidqyz0p" target="_blank">LIFT DETOX BLACK</a>
-                <a href="https://ev.braip.com/pv/lip9j2ow/afi113edv4" target="_blank">REDUPHINE CAPS</a>
-                <a href="https://ev.braip.com/pv/lip3pykw/afi5d3egjp" target="_blank">SIBUTRAMIN</a>
+            
+            <div class="collapse" id="collapseEmagrecimento">
+                <div class="card card-body cMain__collapse">
+                    <a href="https://ev.braip.com/ref?pv=prover52&af=afi4vng86q" target="_blank">BEM MAGRO</a>
+                    <a href="https://ev.braip.com/ref?pv=pro3yoz3&af=afidqyz0p" target="_blank">LIFT DETOX BLACK</a>       
+                    <a href="https://ev.braip.com/ref?pv=prow2nyy&af=afijp033dm" target="_blank">SIBUTRAN BLACK</a>
+                </div>
             </div>
-        </div>
+        </p>
+
         <!--  -->
         <p class="d-inline-flex gap-1">
             <a class="btn btn-primary cMain__btn" data-bs-toggle="collapse" href="#collapseDietas" role="button" aria-expanded="false" aria-controls="collapseExample">
-                DIETAS PARA EMAGRECER
+                PRODUTOS ANTI-CALVICE
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/site.oticabarbosa.com.br/2678904f-seta-baixo.gif" class="cMain__ico">
             </a>
             
-        </p>
-        <div class="collapse" id="collapseDietas">
-            <div class="card card-body cMain__collapse">
-                <a href="https://ev.braip.com/ref?pv=prox6q28&af=afiydv9x85" target="_blank">CARDAPIO EMAGRECEDOR 2.0</a>
-                <a href="https://ev.braip.com/ref?pv=prodnrmj&af=afijp9v34m" target="_blank">51 REFEIÇOES PARA SECAR</a>
+            <div class="collapse" id="collapseDietas">
+                <div class="card card-body cMain__collapse">
+                    <a href=" https://ev.braip.com/ref?pv=provkwke&af=afi7gyml88" target="_blank">FOLIXIL</a>
+                    <a href="https://ev.braip.com/ref?pv=prodrkwx&af=afixj8zn68" target="_blank">EGO MEN HAIR - ANTI QUEDA MASCULINO</a>
+                </div>
             </div>
-        </div>
+        </p>
+
         <!--  -->
         <p class="d-inline-flex gap-1">
             <a class="btn btn-primary cMain__btn" data-bs-toggle="collapse" href="#collapseColageno" role="button" aria-expanded="false" aria-controls="collapseExample">
-                COLÁGENO
+                PRODUTOS DE BELEZA FEMININA
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/site.oticabarbosa.com.br/2678904f-seta-baixo.gif" class="cMain__ico">
             </a>
-        </p>
-        <div class="collapse" id="collapseColageno">
-            <div class="card card-body cMain__collapse">
-                <a href="https://ev.braip.com/ref?pv=progx18j&af=afiydv9z32" target="_blank">B-DREAM COLAGENO</a>
-                <a href="https://ev.braip.com/ref?pv=prol8qqm&af=afi9ez8v75" target="_blank">DREAM COLAGENO</a>
-                <a href="https://ev.braip.com/ref?pv=proyv683&af=afig50238q" target="_blank">COLAGENO GOTA</a>
+
+            <div class="collapse" id="collapseColageno">
+                <div class="card card-body cMain__collapse">
+                    <a href="https://ev.braip.com/ref?pv=pror22x8&af=afizj1pzqx" target="_blank">FEMILISS</a>
+                    <a href="https://app.monetizze.com.br/r/AGB24213348" target="_blank">COLÁGENO HIDROLIZADO (LIDER EM VENDAS)</a>
+                </div>
             </div>
-        </div>
-        <!--  -->
-        <p class="d-inline-flex gap-1">
-            <a class="btn btn-primary cMain__btn" data-bs-toggle="collapse" href="#collapseEstimulantes" role="button" aria-expanded="false" aria-controls="collapseExample">
-                ESTIMULANTES MASCULINOS
-                <img src="https://d9hhrg4mnvzow.cloudfront.net/site.oticabarbosa.com.br/2678904f-seta-baixo.gif" class="cMain__ico">
-            </a>
         </p>
-        <div class="collapse" id="collapseEstimulantes">
-            <div class="card card-body cMain__collapse">
-                <a href="https://ev.braip.com/ref?pv=proz3mkw&af=afi283eg8n" target="_blank">AZULZINHO AFRICANO</a>
-                <a href="https://ev.braip.com/ref?pv=pro85d7w&af=afi8jol1vy" target="_blank">AS CAPS</a>
-            </div>
-        </div>
+
         <!--  -->
         <a href="
         https://wa.me/+5585987688217?text=Ol%C3%A1,%20gostaria%20de%20tirar%20d%C3%BAvidas%20sobre%20os%20produtos.
@@ -88,13 +77,14 @@
         <a href="https://www.instagram.com/knsuplementosoficial_/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256" class="cMain__icoInsta">
                 <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M16,3c-7.16752,0 -13,5.83248 -13,13v18c0,7.16752 5.83248,13 13,13h18c7.16752,0 13,-5.83248 13,-13v-18c0,-7.16752 -5.83248,-13 -13,-13zM16,5h18c6.08648,0 11,4.91352 11,11v18c0,6.08648 -4.91352,11 -11,11h-18c-6.08648,0 -11,-4.91352 -11,-11v-18c0,-6.08648 4.91352,-11 11,-11zM37,11c-1.10457,0 -2,0.89543 -2,2c0,1.10457 0.89543,2 2,2c1.10457,0 2,-0.89543 2,-2c0,-1.10457 -0.89543,-2 -2,-2zM25,14c-6.06329,0 -11,4.93671 -11,11c0,6.06329 4.93671,11 11,11c6.06329,0 11,-4.93671 11,-11c0,-6.06329 -4.93671,-11 -11,-11zM25,16c4.98241,0 9,4.01759 9,9c0,4.98241 -4.01759,9 -9,9c-4.98241,0 -9,-4.01759 -9,-9c0,-4.98241 4.01759,-9 9,-9z"></path></g></g>
+            </svg>
         </a>
-        </svg>
+
     </main>
 
     <footer class="cFooter">
         <p>Desenvolvido por <a href="https://www.instagram.com/lucasbarbosa_14/" target="_blank">BWD</a>.</p>
-        <p>© 2022 KN Suplementos. All rights reserved.</p>
+        <p>© 2022 KN Encapsulados. All rights reserved.</p>
     </footer>
 
     <!-- bootstrap -->
